# cicd-helloworld-example

./: .env.example  Dockerfile  README.md  config.yml  main.py  pyproject.toml
.github/workflows/: ci.yaml
app/: app.py
tests/: test_app.py
